revamped code
